fixed the extra whitespace issue for mobile view

--- a/src/components/Projects/styles_projects/projects.scss
+++ b/src/components/Projects/styles_projects/projects.scss
@@ -55,7 +55,12 @@
    .items{
       flex-direction: column;
       margin: 0;
+
+      .item{
+         margin: 0.5rem;
+      }
    }
+
 }
 
 
