--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -25,7 +25,7 @@
             
                .fab{
                    color: #fff;
-                   margin: 2rem;
+                   margin: 0.5rem;
 
                    &:hover {
                        background:black;
